www/src/assets/styles/main.css
@tailwind base;

@font-face {
  font-family: "favorit";
  src: url("../fonts/ABCFavorit-Bold.woff2");
}

@layer base {
  body {
    @apply font-inter;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply font-favorit;
  }

  /* @media screen and (min-width: 1600px) {
    html {
      font-size: 25px;
    }
  } */

  .button {
    @apply flex justify-center items-center font-bold text-base leading-4 py-2 px-6 whitespace-nowrap;
    height: 3.25rem;
    width: fit-content;
  }

  .button--small {
    @apply py-2 px-4;
    height: 2.375rem;
  }

  .button--big {
    height: 4.125rem;
  }

  .button--block {
    @apply w-full;
  }

  .button--primary {
    @apply bg-meadow text-darkCharcoal;
  }

  .button--secondary {
    @apply bg-rock text-meadow;
  }

  .contrast {
    position: relative;
    margin-top: 3.5rem;
    margin-bottom: 3.5rem;
  }

  .contrast::after,
  .contrast::before {
    @apply w-full;
    height: 3.5rem;
    content: "";
    position: absolute;
    background-repeat: no-repeat;
    background-position: bottom center;
    background-size: cover;
  }

  .contrast::before {
    top: -3.5rem;
  }

  .contrast::after {
    bottom: -3.5rem;
  }

  @media (min-width: 640px) {
    .contrast {
      margin-top: 7.125rem;
      margin-bottom: 7.125rem;
    }

    .contrast::after,
    .contrast::before {
      height: 7.125rem;
    }

    .contrast::before {
      top: -7.125rem;
    }

    .contrast::after {
      bottom: -7.125rem;
    }
  }

  @media (min-width: 1024px) {
    .contrast {
      margin-top: 14.25rem;
      margin-bottom: 14.25rem;
    }

    .contrast::after,
    .contrast::before {
      height: 14.25rem;
    }

    .contrast::before {
      top: -14.25rem;
    }

    .contrast::after {
      bottom: -14.25rem;
    }
  }

  .contrast--black {
    @apply bg-black;
  }

  .contrast--black::before {
    background-image: url("../images/large-divider-black.svg");
  }

  .contrast--black::after {
    background-image: url("../images/large-bottom-divider-black.svg");
  }

  .contrast--offBlack {
    @apply bg-offBlack;
  }

  .contrast--offBlack::before {
    background-image: url("../images/large-divider-off-black.svg");
  }

  .contrast--offBlack::after {
    background-image: url("../images/large-bottom-divider-off-black.svg");
  }

  .contrast--darkCharcoal {
    @apply bg-darkCharcoal;
  }

  .contrast--darkCharcoal::before {
    background-image: url("../images/large-divider-dark-charcoal.svg");
  }

  .contrast--darkCharcoal::after {
    background-image: url("../images/large-bottom-divider-dark-charcoal.svg");
  }

  .contrast--white {
    @apply bg-white;
  }

  .contrast--white::before {
    background-image: url("../images/large-divider-white.svg");
  }

  .contrast--white::after {
    background-image: url("../images/large-bottom-divider-white.svg");
  }
}

